# treeline

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/commands/: plugin-dev.md  promote.md  release.md
.github/workflows/: ci.yml  promote.yml  release.yml  smoke-test.yml
cli/: CLAUDE.md  Cargo.toml  pyproject.toml  tl.spec
cli/scripts/: migrate_community_plugins.py
cli/src/: main.rs  output.rs
cli/src/commands/: backup.rs  doctor.rs  encrypt.rs  import.rs  logs.rs  mod.rs  plugin.rs  query.rs  setup.rs  status.rs  sync.rs  tag.rs  update.rs
cli/tests/smoke/: test_demo_mode_cli.py  (+1 more)
core/src/: config.rs
core/tests/: bulk_dedup_tests.rs  concurrent_access_test.rs  integration_tests.rs
desktop/: AGENTS.md  README.md  package-lock.json  package.json
desktop/docs/: VISUAL_EXAMPLES.md
desktop/src/: App.svelte  app.css  main.ts
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  permissions.rs
desktop/src-tauri/themes/: dark.json  light.json
docs/: astro.config.mjs  package-lock.json  package.json
moltbot/: SKILL.md
openclaw/: SKILL.md
plugin-sdk/: package-lock.json  package.json
plugin-sdk/src/: index.ts
plugin-template/: AGENTS.md  README.md
rust-core/: Cargo.toml
scripts/: install.ps1  install.sh  release.sh
sdk/: package.json
sdk/src/: index.ts
sdk/styles/: plugin.css
template/: AGENTS.md  README.md  package.json  vite.config.ts
template/src/: HelloWorldView.svelte
(+101 files in other folders)
